// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HR renders correctly full width 1`] = `
<View
  style={
    Array [
      Object {
        "alignSelf": "center",
        "borderColor": "#d0d0d0",
        "borderTopWidth": 0.5,
        "marginVertical": 10,
      },
      undefined,
      Object {
        "width": "100%",
      },
    ]
  }
/>
`;

exports[`HR renders correctly normal width 1`] = `
<View
  style={
    Array [
      Object {
        "alignSelf": "center",
        "borderColor": "#d0d0d0",
        "borderTopWidth": 0.5,
        "marginVertical": 10,
      },
      undefined,
      Object {
        "width": "89.5%",
      },
    ]
  }
/>
`;
